--- a/_includes/folder-navigation.html
+++ b/_includes/folder-navigation.html
@@ -48,7 +48,7 @@ function renderNavigation(navData) {
             
             html += `
                 <li style="margin-bottom: 8px;">
-                    <a href=".${folderPath}" style="
+                    <a href="${folderPath}" style="
                         color: #e67e22;
                         text-decoration: none;
                         display: flex;
@@ -80,7 +80,7 @@ function renderNavigation(navData) {
             
             html += `
                 <li style="margin-bottom: 8px;">
-                    <a href=".${filePath}" style="
+                    <a href="${filePath}" style="
                         color: #2c3e50;
                         text-decoration: none;
                         display: flex;
